Bug 112890 - LibreOffice hangs opening some dialogs. About LibreOffice , Safe mode (gtk)
Summary: LibreOffice hangs opening some dialogs. About LibreOffice , Safe mode (gtk)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: Dialog GTK2
  Show dependency treegraph
 
Reported: 2017-10-05 09:11 UTC by Xisco Faulí
Modified: 2017-10-06 09:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-10-05 09:11:23 UTC
Steps:
1. Launch libreOffice in gtk: SAL_USE_VCLPLUGIN=gtk instdir/program/swriter
2. Open Help - About dialog / Help - Restart in safe mode
3. Hangs

Reproduced in 

Version: 6.0.0.0.alpha0+
Build ID: 7901ede8a63f41aea707bd19c22f834253161378
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 6.0.0.0.alpha0+
Build ID: 8457b50ffd6e41b4925aef17bed2b5a2f3bf56bd
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-10-05 09:11:57 UTC
Confirmed by caolán on IRC:
<caolan> x1sc0: hangs here on gtk, ok in gtk3/gen
Comment 2 Commit Notification 2017-10-05 11:58:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=072a077972ada6500151623642db544ff5cb567e

tdf#112890 some dialog don't appear under gtk2

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2017-10-06 08:25:08 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 34f4446b0a5e04465216ff4ec2547aa82e0f06c2
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group