tdf#112890 some dialog don't appear under gtk2

Change-Id: I90a59bfdaec0e78d93888e5cc30d1c7fa147a7e7